--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,193 +1,100 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.11.0)
 project(rero_ros)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -latomic")
-## Compile as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+# Set C++ standard for ROS 2
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
-  message_generation
-  )
+# Compiler warnings
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
+# Needed on some platforms for atomic ops (e.g., abseil)
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -latomic")
 
+# ROS 2 dependencies
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+
+# Enable C++ standard propagation for Abseil
+set(ABSL_PROPAGATE_CXX_STD ON)
+
+# Fetch gRPC and dependencies
 include(FetchContent)
+set(ABSL_ENABLE_INSTALL ON)
 
 FetchContent_Declare(
-        gRPC
-        GIT_REPOSITORY https://github.com/grpc/grpc
-        GIT_TAG        v1.37.1
+  grpc
+  GIT_REPOSITORY https://github.com/grpc/grpc.git
+  GIT_TAG        v1.58.0
 )
+
 set(FETCHCONTENT_QUIET OFF)
-FetchContent_MakeAvailable(gRPC)
+FetchContent_MakeAvailable(grpc)
 
-set(_PROTOBUF_LIBPROTOBUF libprotobuf)
+# Set gRPC/Protobuf variables (no find_package for Protobuf!)
 set(_REFLECTION grpc++_reflection)
-set(_PROTOBUF_PROTOC $<TARGET_FILE:protoc>)
 set(_GRPC_GRPCPP grpc++)
-
+set(_PROTOBUF_LIBPROTOBUF protobuf)
+set(_PROTOBUF_PROTOC $<TARGET_FILE:protobuf::protoc>)
 set(_GRPC_CPP_PLUGIN_EXECUTABLE $<TARGET_FILE:grpc_cpp_plugin>)
 
-add_message_files(
-  FILES
-  Slot.msg
-  Intent.msg
+# ROS 2 interface generation
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/Slot.msg"
+  "msg/Intent.msg"
+  DEPENDENCIES std_msgs
 )
 
-generate_messages(
-  DEPENDENCIES
-  std_msgs  # Or other packages containing msgs
-)
+rosidl_get_typesupport_target(cpp_typesupport_target ${PROJECT_NAME} "rosidl_typesupport_cpp")
 
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES rero_ros
-  CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
-#  DEPENDS system_lib
-)
-
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
+# Include directories for client lib
 include_directories(
-# include
-  ${catkin_INCLUDE_DIRS}
   ${PROJECT_SOURCE_DIR}/lib/client/include
-  ${PROJECT_SOURCE_DIR}/lib/client
+  ${PROJECT_SOURCE_DIR}/lib/client/src
 )
 
-## Declare a C++ library
-# add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/rero_ros.cpp
-# )
+# Detect platform for static lib selection
+message(STATUS "Architecture: ${CMAKE_SYSTEM_PROCESSOR}")
+if(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm")
+  set(RERO_LIB_NAME "libReroClientARMv7.a")
+elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
+  set(RERO_LIB_NAME "libReroClientARM64.a")
+else()
+  set(RERO_LIB_NAME "libReroClient.a")
+endif()
 
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+set(RERO_LIB_PATH "${PROJECT_SOURCE_DIR}/lib/client/${RERO_LIB_NAME}")
 
-## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/rero_ros_node.cpp)
-
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
-
-## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
-
-message(${CMAKE_SYSTEM_PROCESSOR})
-
-IF(${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm") 
-set(RERO_LIB_NAME "libReroClientARMv7.a") 
-ELSEIF(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
-set(RERO_LIB_NAME "libReroClientARM64.a") 
-ELSE()
-set(RERO_LIB_NAME "libReroClient.a")
-ENDIF()
-
-add_executable(speech_recognition src/speech_recognition.cpp)
+# Build your executable
 add_executable(nlu src/nlu.cpp)
-add_executable(text_to_speech src/text_to_speech.cpp)
 
+ament_target_dependencies(nlu
+  rclcpp
+  std_msgs
+)
 
-target_link_libraries(
-  speech_recognition
-  ${PROJECT_SOURCE_DIR}/lib/client/${RERO_LIB_NAME}
-  ${catkin_LIBRARIES}
+target_link_libraries(nlu
+  ${cpp_typesupport_target}
+  ${RERO_LIB_PATH}
   ${_REFLECTION}
   ${_GRPC_GRPCPP}
   ${_PROTOBUF_LIBPROTOBUF}
+
+  absl::strings
+  absl::cord
+  absl::base
 )
 
-target_link_libraries(
-        nlu
-        ${PROJECT_SOURCE_DIR}/lib/client/${RERO_LIB_NAME}
-        ${catkin_LIBRARIES}
-        ${_REFLECTION}
-        ${_GRPC_GRPCPP}
-        ${_PROTOBUF_LIBPROTOBUF}
+# Install target
+install(TARGETS
+  nlu
+  DESTINATION lib/${PROJECT_NAME}
 )
 
-target_link_libraries(
-        text_to_speech
-        ${PROJECT_SOURCE_DIR}/lib/client/${RERO_LIB_NAME}
-        ${catkin_LIBRARIES}
-        ${_REFLECTION}
-        ${_GRPC_GRPCPP}
-        ${_PROTOBUF_LIBPROTOBUF}
-)
-#add_dependencies(speech_recognition)
-
-#############
-## Install ##
-#############
-
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
-
-## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
-
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_rero_ros.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+ament_package()
